Change Log
==========

$Id$

1.1
---

- Lobo layout: provide new part: image grid; make sure image is not repeated if
  it already appears in header part
- new special view 'listsubobjects' for nodes
- allow for adoption of relations to a predicate interface;
  with example implementation for a 'has Role' predicate in loops.organize
- external collection: provide functionality for automatically populate
  meta information of media assets
- new query for retrieving work items independently of task or user
- provide additional ``metaInfo`` field, e.g. for storing source and rights
  information for media assets; show this in info popup;
  link image to info popup in Lobo skin standard views
- Lobo listings: allow for restriction of children listed to certain types
- media assets: allow for access restriction for viewing larger than a
  given maximum size (via option ``media.unauthorized_max_size``)
- external editor functionality: include title field in data in order to
  make it work correctly with the current version of the client module;
  ignore versioning requests (saveasnewversion)
- suppress node view reload when node has been modified in management interface
- overwrite also basic attributes via addObject(), e.g. when importing loops data
- allow editing/creation of work items by others (creator, admin),
  take party/userName from previous work item instead of current user
- field order: make sure title and description are always on top
- yellow pages: view task_candidates for selecting persons with required
  knowledge for task
- improve 'move' and 'delegate' actions: create new run, store source and
  target work items, keep state when moving
- keep access trail (history) in session
- work items: provide 'move' action for assigning a work item to
  another task
- show work items (if present) for arbitrary concepts
- portal page with - now fully editable - portal links
- calendar portlet

1.0
---

New features

- delegation of work items basically working